k8s/todo-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api
  namespace: todo
spec:
  selector:
    app: todo-api
  ports:
    - port: 8000
      targetPort: 8000
